<resources>
    <string name="app_name">MoneyTracker</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="spends">Траты</string>
    <string name="category">Категории</string>
    <string name="category_name">Категория</string>
    <string name="statistic">Статистика</string>
    <string name="settings">Настройки</string>
    <string name="exit">Выход</string>
    <string name="name">Валерий Кисиев</string>
    <string name="Email">kisivaleri@gmail.com</string>
    <string name="hello_world">Hello World!</string>
    <string name="setting_fragment">setting_fragment</string>
    <string name="statistic_fragment">statistic_fragment</string>
    <string name="expenses_header_nav">Траты</string>
    <string name="category_header_nav">Категории</string>
    <string name="statistic_header_nav">Статистика</string>
    <string name="add_new_expenses">Добавит трату</string>
    <string name="setting_header_nav">Настройки</string>
    <string name="fabBehaviorPack">money.android.bignerdranch.com.moneytracker.UI.utils.ScrollingFABBehavior</string>
    <string name="cancel_expenses_button">Отмена</string>
    <string name="ok_expenses_button">Добавить</string>
    <string name="sum_hint_expenses">Сумма</string>
    <string name="desc_hint_expenses">Описание</string>
    <string name="date_hint_expenses">Дата</string>
    <string name="set_simbol_for_expenses_sum">1234567890.</string>
    <string name="snacker_add_text">Нажата кнопка добавить</string>
    <string name="snacker_cancel_text">Нажата кнопка Отмена</string>
    <string name="add_category_header">Добавит категорию</string>
    <string name="category_toast">Не заполнено поле</string>
    <string name="category_text">Категория</string>
    <string name="action_search">Поиск</string>
    <string name="login">login</string>
    <string name="password">password</string>
    <string name="confirm_password">confirm password</string>
    <string name="registration_button_text">Зарегистрироваться</string>
    <string name="logIn_button_text">Войти</string>
    <string name="reg_user_header">Авторизация</string>
    <string name="registerNON">Пользователь с таким логином уже существует</string>
    <string name="login_lenght">Логин и парль должены содержать не менее 5 символов и не более 10</string>
    <string name="pass_lenght">Пароль не должен быть пустым</string>
    <string name="errorNet">Нет подключения к интернету</string>
    <string name="confirmError">Пароль и подтверждение разные</string>
    <string name="wrong_login">Не верное имя пользователя или пароль</string>
    <string name="success_reg">Регистрация усшешно завершена!</string>
    <string name="error">Неизвестная ошибка</string>
    <string name="empty_login">Логин не может быть пустым</string>
    <string name="empty_pass">Пароль не может быть пустым</string>
    <string name="empty_log_pass">Логин или пароль не может быть равен NULL</string>

    <string name="content_authority" translatable="false">com.moneytrackerr</string>
    <string name="sync_account_type" translatable="false">moneytracker.com</string>
    <string name="delete">Delete</string>
    <string name="fective_item">добавить фиктивные траты</string>
    <string name="hint_category">Название категории</string>
    <string name="add">Добавить</string>
    <string name="cancel">Отмена</string>
    <string name="add_category_begin">Добавьте сперва категории</string>
    <string name="select_all">Select All</string>
    <string name="moneytracker">MoneyTracker</string>


    <string name="pref_notification_section">Настройки уведомлений</string>

    <!-- common -->
    <string name="pref_enable_notifications_true">Включен</string>
    <string name="pref_enable_notifications_false">Выключен</string>
    <string name="pref_enable_notifications_default" translatable="false">true</string>

    <!-- Global notifications -->
    <string name="pref_enable_notifications_key" translatable="false">enable_notifications</string>
    <string name="pref_enable_notifications_label">Уведомления</string>

    <!-- Vibrate option -->
    <string name="pref_enable_vibrate_notifications_key" translatable="false">
        enable_vibrate_notifications
    </string>
    <string name="pref_enable_vibrate_notifications_label">Вибрация</string>

    <!-- Sound option -->
    <string name="pref_enable_sound_notifications_key" translatable="false">enable_sound_notifications</string>
    <string name="pref_enable_sound_notifications_label">Звук</string>

    <!-- LED option -->
    <string name="pref_enable_led_notifications_key" translatable="false">enable_led_notifications</string>
    <string name="pref_enable_led_notifications_label">LED</string>

    <!-- Foreground option -->
    <string name="pref_enable_foreground_notifications_key" translatable="false">enable_foreground_notifications</string>
    <string name="pref_enable_foreground_notifications_label">Foreground</string>

    <!-- String for notification bar-->
    <string name="notification_message">Синхронизация данных</string>
    <string name="error_pole">Не заполнены поля</string>
</resources>
