<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/spendItem"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/spends"/>
        <item
            android:id="@+id/categoryItem"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/category"/>
        <item
            android:id="@+id/statItem"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/statistic"/>
    </group>

 <group android:checkableBehavior="single">
<menu>
            <item
                android:id="@+id/settingItem"
                android:icon="@drawable/ic_menu_share"
                android:title="@string/settings"/>
            <item
                android:id="@+id/exitItem"
                android:icon="@drawable/ic_menu_send"
                android:title="@string/exit"/>
</menu>
</group>
    </menu>

