<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:id="@+id/dialog_layout"
              android:layout_margin="@dimen/activity_vertical_margin"
    android:background="@color/cardview_light_background">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:textSize="20sp"
        android:text="@string/category_name"/>
    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/hint_category"
        android:maxLength="15"
        android:inputType="textCapWords"
        android:id="@+id/name_categoryET"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/cancel"
            android:background="@color/cardview_light_background"
            android:id="@+id/button_Cancel"/>
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:id="@+id/button_OK"
            android:background="@color/cardview_light_background"
            android:text="@string/add"/>

    </LinearLayout>
</LinearLayout>