<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
    android:id="@+id/relative_add_category">

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/category_et"
        android:gravity="center_vertical"
        android:hint="@string/category_text"
        android:layout_margin="@dimen/activity_horizontal_margin"/>
    <LinearLayout
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:layout_below="@id/category_et"
        android:layout_margin="@dimen/activity_horizontal_margin">

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/button_cancel_category"
            android:layout_weight="1"
            android:text="@string/cancel_expenses_button"/>
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/button_add_category"
            android:layout_weight="1"
            android:text="@string/ok_expenses_button"/>

    </LinearLayout>

</RelativeLayout>